# platform_cli

./: .gitignore  .pre-commit-config.yaml  pixi.toml  pyproject.toml  setup.cfg
.github/workflows/: publish-pixi.yml  release-pixi.yml  release-pixi.yml.disabled  test-pixi.yml
platform_cli/: cli.py
platform_cli/groups/: conda_channel.py  dev.py  packaging.py  release.py  ws.py
tests/: test_release_pixi_bump.py
