[metadata]
name = platform_cli
version = attr: platform_cli.__version__
url = https://github.com/Greenroom-Robotics/platform_cli
author = Greenroom Robotics
author_email = team@greenroomrobotics.com
maintainer = David Revay
maintainer_email = david.revay@greenroomrobotics.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Copyright (C) 2022, Greenroom Robotics
license_files = LICENSE
description = A CLI for common scripts shared between Greenroom platform modules and platform CI
long_description = file: README.md
long_description_content_type = text/markdown
keywords = colcon

[options]
packages = find:
install_requires =
    toml~=0.10
    setuptools
    colorama
    click
    psutil
    python-on-whales
    watchdog
    GitPython
    typing_extensions>=4.14.1
zip_safe = true

[options.package_data]
platform_cli =
    **/*.py
    **/*.json
    **/*.lock
    **/*.js
    **/Dockerfile.single
    **/Dockerfile.multi

[options.entry_points]
console_scripts =
    platform = platform_cli.cli:init_platform_cli
